--- a/.gitignore
+++ b/.gitignore
@@ -75,5 +75,11 @@ typings/
 # FuseBox cache
 .fusebox/
 
-#DynamoDB Local files 
+#DynamoDB Local files
 .dynamodb/ 
+
+# Ignore package-lock.json
+package-lock.json
+package.json
+.idx/
+.vscode/
